--- a/FrontLeg_Antennae_AntPostHocAnalysis.ipynb
+++ b/FrontLeg_Antennae_AntPostHocAnalysis.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, random, matplotlib, pickle\n",
+    "import os, random, matplotlib, pickle, yaml\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "from tqdm.notebook import tqdm\n",
@@ -65,39 +65,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_path = \"results/round2_legs_antennae\"\n",
+    "with open(f\"{result_path}/INFO.yaml\") as f:\n",
+    "    INFO = yaml.load(f, Loader=yaml.FullLoader)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** DEFINE ***\n",
-    "fps=50\n",
-    "results_path = \"results/frontleg_antennae\"\n",
-    "\n",
-    "# Collect Data\n",
-    "pickle_in = open(f\"{results_path}/files_ref.pickle\",\"rb\")\n",
-    "files_ref = pickle.load(pickle_in)\n",
-    "pickle_in = open(f\"{results_path}/bad_frames_ref.pickle\",\"rb\")\n",
-    "bad_frames_ref = pickle.load(pickle_in)\n",
-    "scales = np.load(f\"{results_path}/scales.npy\")\n",
-    "freq = np.load(f\"{results_path}/freq.npy\")\n",
-    "\n",
     "file_data = {}\n",
-    "tot_bp, tot_angles, tot_power, tot_embed = [], [], [], []\n",
-    "for path in glob(f\"{results_path}/*/\"):\n",
-    "    bp = np.load(f\"{path}/bodypoints.npy\")\n",
-    "    angles = np.load(f\"{path}/angles.npy\")\n",
-    "    power = np.load(f\"{path}/power.npy\")\n",
-    "    embed = np.load(f\"{path}/embeddings.npy\")\n",
-    "    tot_bp.append(bp)\n",
-    "    tot_angles.append(angles)\n",
-    "    tot_power.append(power)\n",
-    "    tot_embed.append(embed)\n",
-    "    file_data[path] = {\n",
-    "        \"bodypoints\": bp,\n",
-    "        \"angles\": angles,\n",
-    "        \"power\": power,\n",
-    "        \"embed\": embed,\n",
-    "    }\n",
+    "tot_bp_unrot, tot_bp, tot_angles, tot_rotations, tot_power, tot_embed = [], [], [], [], [], []\n",
+    "for path in tqdm(glob(f\"{result_path}/*/\")):\n",
+    "    tot_bp.append( np.load(f\"{path}/bodypoints.npy\") )\n",
+    "    tot_angles.append( np.load(f\"{path}/angles.npy\") )\n",
+    "    tot_power.append( np.load(f\"{path}/power.npy\") )\n",
+    "    tot_embed.append( np.load(f\"{path}/embeddings.npy\") )\n",
+    "tot_bp_unrot = np.concatenate(tot_bp_unrot)\n",
     "tot_bp = np.concatenate(tot_bp)\n",
     "tot_angles = np.concatenate(tot_angles)\n",
     "tot_power = np.concatenate(tot_power, axis=2)\n",
@@ -110,9 +100,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "good_fr = np.unique(np.where(~np.isnan(tot_embed))[0])\n",
-    "tot_embed_valid = tot_embed[good_fr,:] \n",
-    "tot_power_valid = tot_power[:,:,good_fr]"
+    "print(f\"tot_bp shape: {tot_bp.shape}\")\n",
+    "print(f\"tot_angles shape: {tot_angles.shape}\")\n",
+    "print(f\"tot_power shape: {tot_power.shape}\")\n",
+    "print(f\"tot_embed shape: {tot_embed.shape}\")"
    ]
   },
   {
@@ -154,8 +145,8 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(figsize=(8,8))\n",
-    "ax.scatter(tot_embed_valid[:,0], tot_embed_valid[:,1], alpha=0.05, s=1)  \n",
+    "fig, ax = plt.subplots(figsize=(10,10))\n",
+    "ax.scatter(tot_embed[:,0], tot_embed[:,1], alpha=0.005, s=3)  \n",
     "ax.set(xlabel='Component 1', ylabel='Component 2', title=\"Behavioral Manifold\")\n",
     "plt.show()"
    ]
@@ -179,10 +170,15 @@
     }
    ],
    "source": [
+    "num_fr, _ = tot_embed.shape\n",
+    "samp_idx = random.sample(range(num_fr), int(num_fr*1/2))\n",
+    "len(samp_idx)\n",
+    "\n",
     "fig, ax = plt.subplots(figsize=(8, 8))\n",
-    "sns.kdeplot(tot_embed_valid[:,0], tot_embed_valid[:,1], \n",
-    "            shade=True, shade_lowest=True, gridsize=100, \n",
-    "            levels=40, cmap='jet',cbar=False, ax=ax)\n",
+    "sns.kdeplot(x=tot_embed[samp_idx,0], y=tot_embed[samp_idx,1], \n",
+    "            shade=True, thresh=0, gridsize=100, bw_adjust=0.5,\n",
+    "            levels=100, cmap='rocket_r',\n",
+    "            cbar=False, ax=ax)\n",
     "ax.set(xlabel='Component 1', ylabel='Component 2', title=\"Density Plot\")\n",
     "plt.show()"
    ]
@@ -207,7 +203,12 @@
     "from matplotlib.ticker import FormatStrFormatter\n",
     "\n",
     "matplotlib.rc('font', size=MEDIUM_SIZE)\n",
-    "matplotlib.rc('axes', titlesize=MEDIUM_SIZE)"
+    "matplotlib.rc('axes', titlesize=MEDIUM_SIZE)\n",
+    "\n",
+    "freq = np.array([ 1.        ,  1.18461108,  1.40330341,  1.66236876,  1.96926045,\n",
+    "        2.33280775,  2.76346991,  3.27363707,  3.87798674,  4.59390605,\n",
+    "        5.441992  ,  6.44664402,  7.63676592,  9.04659752, 10.71669965,\n",
+    "       12.69512113, 15.03878113, 17.81510674, 21.10397281, 25.        ])"
    ]
   },
   {
@@ -241,40 +242,37 @@
     }
    ],
    "source": [
-    "max_freq_idx = np.argmax(tot_power_valid, axis=1)\n",
+    "# Figure Information\n",
+    "angle_idx = 7\n",
+    "fig_title = \"Behavioral Mapping by Left Back Leg Frequency\"\n",
+    "\n",
+    "max_freq_idx = np.argmax(tot_power[:,:-1,:], axis=1)\n",
     "max_freq = freq[max_freq_idx]\n",
+    "\n",
     "# Freq Color Scheme\n",
     "num_freq = len(freq)\n",
-    "freq_color_palette = sns.color_palette('Spectral', num_freq)\n",
-    "\n",
-    "cmap, norm = colors.from_levels_and_colors(freq, freq_color_palette, extend=\"max\")\n",
-    "\n",
-    "leg1freq_cluster_colors = np.array([freq_color_palette[f] for f in max_freq_idx[0]])\n",
-    "leg2freq_cluster_colors = np.array([freq_color_palette[f] for f in max_freq_idx[1]])\n",
-    "antennae1freq_cluster_colors = np.array([freq_color_palette[f] for f in max_freq_idx[2]])\n",
-    "antennae2freq_cluster_colors = np.array([freq_color_palette[f] for f in max_freq_idx[3]])\n",
+    "freq_color_palette = sns.color_palette('mako_r', num_freq)\n",
+    "cmap1, norm1 = colors.from_levels_and_colors(freq, freq_color_palette, extend=\"max\")\n",
+    "freq_cluster_colors = np.array([freq_color_palette[f] for f in max_freq_idx[angle_idx]])\n",
     "\n",
     "# Figures\n",
-    "fig, ax = plt.subplots(2,2,figsize=(15,15))\n",
-    "ax[0,0].scatter(tot_embed_valid[:,0], tot_embed_valid[:,1], color=antennae1freq_cluster_colors, alpha=0.2, s=1)  \n",
-    "ax[0,0].set(xlabel='Component 1', ylabel='Component 2', title=\"Behavioral Manifold (Antennae 1 Frequencies)\")\n",
-    "\n",
-    "ax[0,1].scatter(tot_embed_valid[:,0], tot_embed_valid[:,1], color=antennae2freq_cluster_colors, alpha=0.2, s=1)  \n",
-    "ax[0,1].set(xlabel='Component 1', ylabel='Component 2', title=\"Behavioral Manifold (Antennae 2 Frequencies)\")\n",
-    "\n",
-    "ax[1,0].scatter(tot_embed_valid[:,0], tot_embed_valid[:,1], color=leg1freq_cluster_colors, alpha=0.2, s=1)  \n",
-    "ax[1,0].set(xlabel='Component 1', ylabel='Component 2', title=\"Behavioral Manifold (Leg 1 Frequencies)\")\n",
-    "\n",
-    "ax[1,1].scatter(tot_embed_valid[:,0], tot_embed_valid[:,1], color=leg2freq_cluster_colors, alpha=0.2, s=1)  \n",
-    "ax[1,1].set(xlabel='Component 1', ylabel='Component 2', title=\"Behavioral Manifold (Leg 2 Frequencies)\")\n",
-    "plt.show()\n",
-    "\n",
+    "fig, ax = plt.subplots(figsize=(5,5))\n",
+    "ax.scatter(tot_embed[:,0], tot_embed[:,1], color=freq_cluster_colors, alpha=0.05, s=1)  \n",
+    "ax.set(xlabel='Component 1', ylabel='Component 2', title=fig_title)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Colorbar\n",
-    "fig, ax = plt.subplots(figsize=(5, 1))\n",
+    "fig, ax = plt.subplots(figsize=(1,15))\n",
     "fig.subplots_adjust(bottom=0.5)\n",
-    "cb1 = mpl.colorbar.ColorbarBase(ax, cmap=cmap, norm=norm, orientation='horizontal')\n",
+    "cb1 = mpl.colorbar.ColorbarBase(ax, cmap=cmap1, norm=norm1, ticks=freq, orientation='vertical')\n",
     "cb1.set_label('(Hz)')\n",
-    "ax.xaxis.set_major_formatter(FormatStrFormatter('%.1f'))\n",
     "plt.show()"
    ]
   },
@@ -304,9 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -388,9 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -452,9 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2138,9 +2130,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2206,9 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "num_cluster = np.max(gmm_label)+1\n",
