--- a/notebook/dong/0_feature_analysis/feature_selection.ipynb
+++ b/notebook/dong/0_feature_analysis/feature_selection.ipynb
@@ -2148,9 +2148,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "notebook_analysis",
    "language": "python",
-   "name": "python3"
+   "name": "notebook_analysis"
   },
   "language_info": {
    "codemirror_mode": {
