refactored some codes and created a figure file

--- a/notebook/dong/0_feature_analysis/feature_selection.ipynb
+++ b/notebook/dong/0_feature_analysis/feature_selection.ipynb
@@ -4,45 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style>\n",
-       ".output_png {\n",
-       "    display: table-cell;\n",
-       "    text-align: center;\n",
-       "    vertical-align: middle;\n",
-       "}\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.core.display import HTML\n",
-    "HTML(\"\"\"\n",
-    "<style>\n",
-    ".output_png {\n",
-    "    display: table-cell;\n",
-    "    text-align: center;\n",
-    "    vertical-align: middle;\n",
-    "}\n",
-    "</style>\n",
-    "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import os, random, matplotlib, pickle, yaml\n",
@@ -56,7 +17,8 @@
     "from matplotlib.colors import ListedColormap\n",
     "from glob2 import glob\n",
     "\n",
-    "SMALL_SIZE, MEDIUM_SIZE = 9, 12"
+    "SMALL_SIZE, MEDIUM_SIZE = 9, 12\n",
+    "PROJECT_PATH = \"/Users/donghur/Desktop/Research/Murthy/BM_GPU\""
    ]
   },
   {
@@ -68,30 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result_path = \"results/round3_antennae\"\n",
-    "with open(f\"{result_path}/INFO.yaml\") as f:\n",
-    "    INFO = yaml.load(f, Loader=yaml.FullLoader)\n",
-    "    INFO_values = list(INFO.values())\n",
-    "    INFO_values.sort(key=lambda x: x['order'])\n",
-    "    \n",
-    "config_path = \".\"\n",
-    "with open(f\"{config_path}/config.yaml\") as f:\n",
-    "    config = yaml.load(f, Loader=yaml.FullLoader)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a886b1c1aa014d91a85d9b266a11c92e",
+       "model_id": "2281b077e5bf4b9cb6181936820f629d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,18 +53,39 @@
      "text": [
       "\n"
      ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'results/round3/07YTminfr_antmovie200928210913/bodypoints.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-77fa1885eccc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mtot_bp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtot_bp_scaled\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtot_bp_rotated\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtot_body_orientation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtot_angles\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtot_rotations\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtot_power\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtot_embed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mINFO_values\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mtot_bp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mPROJECT_PATH\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{file['directory']}/bodypoints.npy\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mtot_bp_scaled\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mPROJECT_PATH\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{file['directory']}/scaled_bodypoints.npy\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mtot_bp_rotated\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mPROJECT_PATH\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{file['directory']}/rotated_bodypoints.npy\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    414\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    415\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 416\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    417\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    418\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'results/round3/07YTminfr_antmovie200928210913/bodypoints.npy'"
+     ]
     }
    ],
    "source": [
+    "result_path = \"results/round3\"\n",
+    "with open(f\"{PROJECT_PATH}/{result_path}/INFO.yaml\") as f:\n",
+    "    INFO = yaml.load(f, Loader=yaml.FullLoader)\n",
+    "    INFO_values = list(INFO.values())\n",
+    "    INFO_values.sort(key=lambda x: x['order'])\n",
+    "    \n",
+    "with open(f\"{PROJECT_PATH}/config.yaml\") as f:\n",
+    "    config = yaml.load(f, Loader=yaml.FullLoader)\n",
+    "    \n",
     "tot_bp, tot_bp_scaled, tot_bp_rotated, tot_body_orientation, tot_angles, tot_rotations, tot_power, tot_embed = [], [], [], [], [], [], [], []\n",
     "for file in tqdm(INFO_values):\n",
-    "    tot_bp.append( np.load(f\"{file['directory']}/bodypoints.npy\") )\n",
-    "    tot_bp_scaled.append( np.load(f\"{file['directory']}/scaled_bodypoints.npy\") )\n",
-    "    tot_bp_rotated.append( np.load(f\"{file['directory']}/rotated_bodypoints.npy\") )\n",
-    "    tot_body_orientation.append( np.load(f\"{file['directory']}/body_orientation_angles.npy\") )\n",
-    "    tot_angles.append( np.load(f\"{file['directory']}/angles.npy\") )\n",
-    "    tot_power.append( np.load(f\"{file['directory']}/power.npy\") )\n",
-    "    tot_embed.append( np.load(f\"{file['directory']}/embeddings.npy\") )\n",
+    "    tot_bp.append( {PROJECT_PATH}/np.load(f\"{file['directory']}/bodypoints.npy\") )\n",
+    "    tot_bp_scaled.append( {PROJECT_PATH}/np.load(f\"{file['directory']}/scaled_bodypoints.npy\") )\n",
+    "    tot_bp_rotated.append( {PROJECT_PATH}/np.load(f\"{file['directory']}/rotated_bodypoints.npy\") )\n",
+    "    tot_body_orientation.append( {PROJECT_PATH}/np.load(f\"{file['directory']}/body_orientation_angles.npy\") )\n",
+    "    tot_angles.append( {PROJECT_PATH}/np.load(f\"{file['directory']}/angles.npy\") )\n",
+    "    tot_power.append( {PROJECT_PATH}/np.load(f\"{file['directory']}/power.npy\") )\n",
+    "    tot_embed.append( {PROJECT_PATH}/np.load(f\"{file['directory']}/embeddings.npy\") )\n",
     "\n",
     "tot_bp = np.concatenate(tot_bp)\n",
     "tot_bp_scaled = np.concatenate(tot_bp_scaled)\n",
@@ -127,48 +93,10 @@
     "tot_body_orientation = np.concatenate(tot_body_orientation)\n",
     "tot_angles = np.concatenate(tot_angles)\n",
     "tot_power = np.concatenate(tot_power, axis=2)\n",
-    "tot_embed = np.concatenate(tot_embed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "tot_embed = np.concatenate(tot_embed)\n",
+    "\n",
     "num_fr,_,_ = tot_bp_rotated.shape\n",
     "likelihood = tot_bp_rotated[:,:,2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 392,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data1 = np.ones((100,3))\n",
-    "data2 = np.ones((100,4))\n",
-    "data3 = np.ones((100,9))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 397,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100, 16)"
-      ]
-     },
-     "execution_count": 397,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.concatenate([data1, data2, data3], axis=1).shape"
    ]
   },
   {
