--- a/notebook/dong/1_misc/LimbAnalysis.ipynb
+++ b/notebook/dong/1_misc/LimbAnalysis.ipynb
@@ -6,9 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, random, matplotlib, pickle, yaml, hdbscan\n",
+    "import os, random, matplotlib, pickle, yaml\n",
     "import numpy as np\n",
-    "from sklearn.utils import shuffle\n",
     "import seaborn as sns\n",
     "from tqdm.notebook import tqdm\n",
     "import matplotlib.pyplot as plt\n",
@@ -16,7 +15,10 @@
     "import matplotlib as mpl\n",
     "from matplotlib.ticker import FormatStrFormatter\n",
     "from matplotlib.colors import ListedColormap\n",
-    "from glob2 import glob"
+    "from glob2 import glob\n",
+    "\n",
+    "SMALL_SIZE, MEDIUM_SIZE = 9, 12\n",
+    "PROJECT_PATH = \"/Users/donghur/Desktop/Research/Murthy/BM_GPU\""
    ]
   },
   {
