--- a/notebook/dong/4_all_features/(ALL)Cluster_Feature_Embedding.ipynb
+++ b/notebook/dong/4_all_features/(ALL)Cluster_Feature_Embedding.ipynb
@@ -2,54 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SMALL_SIZE, MEDIUM_SIZE = 9, 12\n",
+    "PROJECT_PATH = \"/Users/donghur/Desktop/Research/Murthy/BM_GPU\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, random, matplotlib, pickle, yaml, hdbscan\n",
+    "import sys\n",
     "import numpy as np\n",
-    "from sklearn.utils import shuffle\n",
-    "import seaborn as sns\n",
+    "from glob import glob\n",
+    "import random, matplotlib\n",
     "from tqdm.notebook import tqdm\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.colors as colors\n",
-    "import matplotlib as mpl\n",
-    "from matplotlib.ticker import FormatStrFormatter\n",
-    "from matplotlib.colors import ListedColormap\n",
-    "from glob2 import glob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "skeleton = [\n",
-    "    [0,1,2,3],\n",
-    "    [4,5,6,7],\n",
-    "    [8,9,10],\n",
-    "    [11,12,13],\n",
-    "    [14,15,16],\n",
-    "    [17,18,19,20],\n",
-    "    [21,22,23],\n",
-    "    [24,25,26],\n",
-    "    [27,28,29]\n",
-    "]\n",
-    "skeleton_color=['tab:blue','tab:orange','tab:green','tab:red','tab:purple','tab:brown','tab:pink','tab:gray','tab:olive', 'tab:cyan']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result_path = \"../results/round3\"\n",
-    "with open(f\"{result_path}/INFO.yaml\") as f:\n",
-    "    INFO = yaml.load(f, Loader=yaml.FullLoader)\n",
-    "    INFO_values = list(INFO.values())\n",
-    "    INFO_values.sort(key=lambda x: x['order'])"
+    "\n",
+    "sys.path.append(PROJECT_PATH)\n",
+    "from utils.data import Dataset"
    ]
   },
   {
@@ -58,9 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = \"..\"\n",
-    "with open(f\"{config_path}/config.yaml\") as f:\n",
-    "    config = yaml.load(f, Loader=yaml.FullLoader)"
+    "Data = Dataset(PROJECT_PATH, 'round3')\n",
+    "Data.load_data()"
    ]
   },
   {
@@ -69,49 +43,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root_path = \"..\"\n",
-    "rot_bp, angles, limbs = [], [], []\n",
-    "angle_power, limb_power = [], []\n",
-    "all_embed = []\n",
-    "all_postural_embed, marker_postural_embed, angle_postural_embed, limb_postural_embed = [], [], [], []\n",
-    "all_kinematic_embed, marker_kinematic_embed, limb_kinematic_embed, angle_kinematic_embed = [], [], [], []\n",
+    "# configuration\n",
+    "INFO_values = Data.info_values\n",
+    "config = Data.config\n",
+    "skeleton = config['skeleton']\n",
+    "skeleton_color= config['skeleton_color']\n",
     "\n",
-    "for file in tqdm(INFO_values):\n",
-    "    rot_bp.append( np.load(f\"{root_path}/{file['directory']}/rotated_bodypoints.npy\") )\n",
-    "    angles.append( np.load(f\"{root_path}/{file['directory']}/angles.npy\") )\n",
-    "    limbs.append( np.load(f\"{root_path}/{file['directory']}/limbs.npy\") )\n",
-    "    angle_power.append( np.load(f\"{root_path}/{file['directory']}/angle_power.npy\") )\n",
-    "    limb_power.append( np.load(f\"{root_path}/{file['directory']}/limb_power.npy\") )\n",
-    "    \n",
-    "    all_embed.append( np.load(f\"{root_path}/{file['directory']}/all_embeddings.npy\") )\n",
-    "    \n",
-    "    all_postural_embed.append( np.load(f\"{root_path}/{file['directory']}/all_postural_embeddings.npy\") )\n",
-    "#     marker_postural_embed.append( np.load(f\"{root_path}/{file['directory']}/marker_postural_embeddings.npy\") )\n",
-    "#     angle_postural_embed.append( np.load(f\"{root_path}/{file['directory']}/angle_postural_embeddings.npy\") )\n",
-    "#     limb_postural_embed.append( np.load(f\"{root_path}/{file['directory']}/limb_postural_embeddings.npy\") )\n",
-    "    \n",
-    "    all_kinematic_embed.append( np.load(f\"{root_path}/{file['directory']}/all_kinematic_embeddings.npy\") )\n",
-    "#     marker_kinematic_embed.append( np.load(f\"{root_path}/{file['directory']}/marker_kinematic_embeddings.npy\") )\n",
-    "#     limb_kinematic_embed.append( np.load(f\"{root_path}/{file['directory']}/marker_limb_embeddings.npy\") )\n",
-    "#     angle_kinematic_embed.append( np.load(f\"{root_path}/{file['directory']}/marker_angle_embeddings.npy\") )\n",
-    "    \n",
-    "rot_bp = np.concatenate(rot_bp)\n",
-    "angles = np.concatenate(angles)\n",
-    "limbs = np.concatenate(limbs)\n",
-    "angle_power = np.concatenate(angle_power)\n",
-    "limb_power = np.concatenate(limb_power)\n",
+    "# features\n",
+    "rot_bp = Data.data_obj['rotated_bodypoints']\n",
+    "angles = Data.data_obj['angles']\n",
+    "limbs = Data.data_obj['limbs']\n",
+    "angle_power = Data.data_obj['angle_power']\n",
+    "limb_power = Data.data_obj['limb_power']\n",
     "\n",
-    "all_embed = np.concatenate(all_embed)\n",
-    "\n",
-    "all_postural_embed = np.concatenate(all_postural_embed)\n",
-    "# marker_postural_embed = np.concatenate(marker_postural_embed)\n",
-    "# angle_postural_embed = np.concatenate(angle_postural_embed)\n",
-    "# alllimb_postural_embed_embed = np.concatenate(limb_postural_embed)\n",
-    "\n",
-    "all_kinematic_embed = np.concatenate(all_kinematic_embed)\n",
-    "# marker_kinematic_embed = np.concatenate(marker_kinematic_embed)\n",
-    "# limb_kinematic_embed = np.concatenate(limb_kinematic_embed)\n",
-    "# angle_kinematic_embed = np.concatenate(angle_kinematic_embed)"
+    "# embeddings\n",
+    "all_embed = Data.data_obj['all_embeddings']\n",
+    "all_postural_embed = Data.data_obj['all_postural_embeddings']\n",
+    "all_kinematic_embed = Data.data_obj['all_kinematic_embeddings']"
    ]
   },
   {
