--- a/notebook/dong/0_feature_analysis/feature_check.ipynb
+++ b/notebook/dong/0_feature_analysis/feature_check.ipynb
@@ -232,6 +232,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1.2018e-01,  1.4902e+00,  1.0000e+00],\n",
+       "        [-3.0804e-04,  1.0215e+00,  1.0000e+00],\n",
+       "        [ 0.0000e+00,  0.0000e+00,  1.0000e+00],\n",
+       "        ...,\n",
+       "        [-1.0254e+00, -6.6064e-01,  1.0000e+00],\n",
+       "        [-6.1914e-01,  1.6159e-02,  1.0000e+00],\n",
+       "        [-1.6357e-01,  8.0383e-02,  1.0000e+00]],\n",
+       "\n",
+       "       [[ 2.7759e-01,  1.4717e+00,  1.0000e+00],\n",
+       "        [ 2.7180e-05,  1.0977e+00,  1.0000e+00],\n",
+       "        [ 0.0000e+00,  0.0000e+00,  1.0000e+00],\n",
+       "        ...,\n",
+       "        [-9.9219e-01, -1.0469e+00,  1.0000e+00],\n",
+       "        [-5.5908e-01, -6.6284e-02,  1.0000e+00],\n",
+       "        [-5.1331e-02,  5.3223e-02,  1.0000e+00]],\n",
+       "\n",
+       "       [[ 1.7847e-01,  1.4375e+00,  1.0000e+00],\n",
+       "        [ 1.8239e-05,  1.1426e+00,  1.0000e+00],\n",
+       "        [ 0.0000e+00,  0.0000e+00,  1.0000e+00],\n",
+       "        ...,\n",
+       "        [-7.8613e-01, -1.1338e+00,  1.0000e+00],\n",
+       "        [-5.2441e-01, -1.6345e-01,  1.0000e+00],\n",
+       "        [-5.0476e-02,  5.4321e-02,  1.0000e+00]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[        nan,         nan,  1.0000e+00],\n",
+       "        [        nan,         nan,  1.0000e+00],\n",
+       "        [        nan,         nan,  1.0000e+00],\n",
+       "        ...,\n",
+       "        [        nan,         nan,  1.0000e+00],\n",
+       "        [        nan,         nan,  1.0000e+00],\n",
+       "        [        nan,         nan,  1.0000e+00]],\n",
+       "\n",
+       "       [[        nan,         nan,  1.0000e+00],\n",
+       "        [        nan,         nan,  1.0000e+00],\n",
+       "        [        nan,         nan,  1.0000e+00],\n",
+       "        ...,\n",
+       "        [        nan,         nan,  1.0000e+00],\n",
+       "        [        nan,         nan,  1.0000e+00],\n",
+       "        [        nan,         nan,  1.0000e+00]],\n",
+       "\n",
+       "       [[        nan,         nan,  1.0000e+00],\n",
+       "        [        nan,         nan,  1.0000e+00],\n",
+       "        [        nan,         nan,  1.0000e+00],\n",
+       "        ...,\n",
+       "        [        nan,         nan,  1.0000e+00],\n",
+       "        [        nan,         nan,  1.0000e+00],\n",
+       "        [        nan,         nan,  1.0000e+00]]], dtype=float16)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rot_bp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [
