trying to fix the nan problem from DLC

--- a/notebook/dong/0_feature_analysis/feature_check.ipynb
+++ b/notebook/dong/0_feature_analysis/feature_check.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "import utils.figure as ufigure\n",
-    "# %load_ext autoreload\n",
+    "%load_ext autoreload\n",
     "%autoreload 1\n",
     "%aimport utils.data\n",
     "%aimport utils.figure"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,20 @@
      "text": [
       "Loading INFO.yaml ...\n",
       "Finished loading INFO\n",
-      "Loading config.yaml ...\n",
+      "Loading config.yaml ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  3%|▎         | 4/141 [00:00<00:03, 34.70it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Finished loading config\n"
      ]
     },
@@ -59,7 +72,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 141/141 [00:02<00:00, 54.60it/s]\n"
+      "100%|██████████| 141/141 [00:05<00:00, 24.06it/s]\n"
      ]
     }
    ],
@@ -70,11 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "# configuration\n",
+    "INFO = Data.info\n",
     "INFO_values = Data.info_values\n",
     "config = Data.config\n",
     "skeleton = config['skeleton']\n",
@@ -164,213 +178,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 75.1 ,  97.5 ,   1.  ],\n",
-       "        [ 75.44,  87.06,   1.  ],\n",
-       "        [ 81.56,  65.9 ,   1.  ],\n",
-       "        ...,\n",
-       "        [ 64.25,  46.03,   1.  ],\n",
-       "        [ 68.6 ,  62.5 ,   1.  ],\n",
-       "        [ 77.7 ,  66.56,   1.  ]],\n",
-       "\n",
-       "       [[ 76.8 ,  92.9 ,   1.  ],\n",
-       "        [ 73.2 ,  83.5 ,   1.  ],\n",
-       "        [ 79.5 ,  60.66,   1.  ],\n",
-       "        ...,\n",
-       "        [ 64.9 ,  33.16,   1.  ],\n",
-       "        [ 68.25,  56.06,   1.  ],\n",
-       "        [ 78.1 ,  61.47,   1.  ]],\n",
-       "\n",
-       "       [[ 75.5 ,  92.  ,   1.  ],\n",
-       "        [ 72.6 ,  85.1 ,   1.  ],\n",
-       "        [ 76.25,  60.72,   1.  ],\n",
-       "        ...,\n",
-       "        [ 63.06,  34.  ,   1.  ],\n",
-       "        [ 65.56,  55.56,   1.  ],\n",
-       "        [ 75.  ,  61.72,   1.  ]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[ 55.94,  73.9 ,   1.  ],\n",
-       "        [ 63.5 ,  74.25,   1.  ],\n",
-       "        [ 81.75,  76.25,   1.  ],\n",
-       "        ...,\n",
-       "        [102.  ,  59.34,   1.  ],\n",
-       "        [ 91.25,  67.3 ,   1.  ],\n",
-       "        [ 82.94,  72.06,   1.  ]],\n",
-       "\n",
-       "       [[ 57.22,  74.94,   1.  ],\n",
-       "        [ 64.6 ,  70.8 ,   1.  ],\n",
-       "        [ 83.1 ,  75.75,   1.  ],\n",
-       "        ...,\n",
-       "        [102.7 ,  59.34,   1.  ],\n",
-       "        [ 92.6 ,  67.6 ,   1.  ],\n",
-       "        [ 84.44,  72.56,   1.  ]],\n",
-       "\n",
-       "       [[ 55.2 ,  75.06,   1.  ],\n",
-       "        [ 62.34,  75.1 ,   1.  ],\n",
-       "        [ 80.8 ,  75.8 ,   1.  ],\n",
-       "        ...,\n",
-       "        [103.75,  58.84,   1.  ],\n",
-       "        [ 90.75,  66.3 ,   1.  ],\n",
-       "        [ 82.  ,  71.2 ,   1.  ]]], dtype=float16)"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 1.2018e-01,  1.4902e+00,  1.0000e+00],\n",
-       "        [-3.0804e-04,  1.0215e+00,  1.0000e+00],\n",
-       "        [ 0.0000e+00,  0.0000e+00,  1.0000e+00],\n",
-       "        ...,\n",
-       "        [-1.0254e+00, -6.6064e-01,  1.0000e+00],\n",
-       "        [-6.1914e-01,  1.6159e-02,  1.0000e+00],\n",
-       "        [-1.6357e-01,  8.0383e-02,  1.0000e+00]],\n",
-       "\n",
-       "       [[ 2.7759e-01,  1.4717e+00,  1.0000e+00],\n",
-       "        [ 2.7180e-05,  1.0977e+00,  1.0000e+00],\n",
-       "        [ 0.0000e+00,  0.0000e+00,  1.0000e+00],\n",
-       "        ...,\n",
-       "        [-9.9219e-01, -1.0469e+00,  1.0000e+00],\n",
-       "        [-5.5908e-01, -6.6284e-02,  1.0000e+00],\n",
-       "        [-5.1331e-02,  5.3223e-02,  1.0000e+00]],\n",
-       "\n",
-       "       [[ 1.7847e-01,  1.4375e+00,  1.0000e+00],\n",
-       "        [ 1.8239e-05,  1.1426e+00,  1.0000e+00],\n",
-       "        [ 0.0000e+00,  0.0000e+00,  1.0000e+00],\n",
-       "        ...,\n",
-       "        [-7.8613e-01, -1.1338e+00,  1.0000e+00],\n",
-       "        [-5.2441e-01, -1.6345e-01,  1.0000e+00],\n",
-       "        [-5.0476e-02,  5.4321e-02,  1.0000e+00]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[        nan,         nan,  1.0000e+00],\n",
-       "        [        nan,         nan,  1.0000e+00],\n",
-       "        [        nan,         nan,  1.0000e+00],\n",
-       "        ...,\n",
-       "        [        nan,         nan,  1.0000e+00],\n",
-       "        [        nan,         nan,  1.0000e+00],\n",
-       "        [        nan,         nan,  1.0000e+00]],\n",
-       "\n",
-       "       [[        nan,         nan,  1.0000e+00],\n",
-       "        [        nan,         nan,  1.0000e+00],\n",
-       "        [        nan,         nan,  1.0000e+00],\n",
-       "        ...,\n",
-       "        [        nan,         nan,  1.0000e+00],\n",
-       "        [        nan,         nan,  1.0000e+00],\n",
-       "        [        nan,         nan,  1.0000e+00]],\n",
-       "\n",
-       "       [[        nan,         nan,  1.0000e+00],\n",
-       "        [        nan,         nan,  1.0000e+00],\n",
-       "        [        nan,         nan,  1.0000e+00],\n",
-       "        ...,\n",
-       "        [        nan,         nan,  1.0000e+00],\n",
-       "        [        nan,         nan,  1.0000e+00],\n",
-       "        [        nan,         nan,  1.0000e+00]]], dtype=float16)"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rot_bp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "34\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/donghur/Desktop/Research/Murthy/BM_GPU/helper.py:39: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  bc = c - b\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "144\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/donghur/Desktop/Research/Murthy/BM_GPU/helper.py:40: RuntimeWarning: invalid value encountered in arccos\n",
-      "  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "98\n",
-      "0\n",
-      "0\n",
-      "37\n",
-      "151\n",
-      "98\n",
-      "0\n",
-      "0\n",
-      "37\n"
-     ]
-    }
-   ],
-   "source": [
-    "angles[:,:,0] = angle_calc(rot_bp[:,:,0:2], config['angles'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a = data[:,ele['a'],:]\n",
-    "b = data[:,ele['b'],:]\n",
-    "c = data[:,ele['c'],:]\n",
-    "\n",
-    "ba = a - b\n",
-    "bc = c - b\n",
-    "test = np.where((np.linalg.norm(ba, axis=-1) * np.linalg.norm(bc, axis=-1))==0)[0]\n",
-    "print(len(test))\n",
-    "cosine_angle = np.sum(ba*bc,axis=-1)/ (np.linalg.norm(ba, axis=-1) * np.linalg.norm(bc, axis=-1))\n",
-    "angles[:,feat] = np.arccos(cosine_angle)/np.pi # normalize"
-   ]
+   "source": []
   }
  ],
  "metadata": {
