--- a/notebook/dong/0_feature_analysis/dataset_check.ipynb
+++ b/notebook/dong/0_feature_analysis/dataset_check.ipynb
@@ -233,22 +233,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([    107,     231,     232, ..., 1872135, 1872136, 1872137])"
+       "(0,)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bad_fr"
+    "np.unique(np.where(np.isinf(rot_bp))[0]).shape"
    ]
   },
   {
