--- a/notebook/dong/0_feature_analysis/dataset_check.ipynb
+++ b/notebook/dong/0_feature_analysis/dataset_check.ipynb
@@ -256,7 +256,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.sqrt((limb_i[:,0,0]-limb_i[:,1,0])**2 + (limb_i[:,0,1]-limb_i[:,1,1])**2)"
+   ]
   }
  ],
  "metadata": {
