--- a/notebook/dong/0_feature_analysis/dataset_check.ipynb
+++ b/notebook/dong/0_feature_analysis/dataset_check.ipynb
@@ -259,6 +259,68 @@
    "source": [
     "np.sqrt((limb_i[:,0,0]-limb_i[:,1,0])**2 + (limb_i[:,0,1]-limb_i[:,1,1])**2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = np.array([[[  37.12 -449.8 ],\n",
+    "  [  81.3  -195.9 ]],\n",
+    "\n",
+    " [[  36.78 -461.  ],\n",
+    "  [  82.94 -201.5 ]],\n",
+    "\n",
+    " [[  36.38 -472.2 ],\n",
+    "  [  84.5  -207.5 ]],\n",
+    "\n",
+    " [[  35.84 -483.5 ],\n",
+    "  [  85.94 -213.2 ]],\n",
+    "\n",
+    " [[  35.9  -494.5 ],\n",
+    "  [  87.75 -219.  ]],\n",
+    "\n",
+    " [[  35.28 -506.  ],\n",
+    "  [  89.1  -224.9 ]],\n",
+    "\n",
+    " [[  35.12 -517.5 ],\n",
+    "  [  90.8  -230.9 ]],\n",
+    "\n",
+    " [[  34.94 -528.5 ],\n",
+    "  [  92.44 -236.6 ]],\n",
+    "\n",
+    " [[  34.66 -539.5 ],\n",
+    "  [  94.06 -242.5 ]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-412.68],\n",
+       "       [-114.6 ]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
