--- a/notebook/dong/0_feature_analysis/dataset_check.ipynb
+++ b/notebook/dong/0_feature_analysis/dataset_check.ipynb
@@ -111,208 +111,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "likelihood = bp[:,:,2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(174253,)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.unique(np.where(np.isnan(rot_bp))[0]).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import collections\n",
-    "\n",
-    "### Locate Bad Frames ###\n",
-    "# check if below likelihood threshold\n",
-    "(below_thresh_fr, below_thresh_marker) = np.where(likelihood < config['likelihood_thresh'])\n",
-    "cnt = collections.Counter(below_thresh_fr)\n",
-    "cnt_array = np.array(list(cnt.items()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 97,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f848a2844b904f44a3a94799cd49611e",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "array([[     78,       1],\n",
-       "       [     84,       1],\n",
-       "       [    107,       3],\n",
-       "       ...,\n",
-       "       [1872129,       1],\n",
-       "       [1872130,       3],\n",
-       "       [1872131,       3]])"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=141.0), HTML(value='')))"
       ]
      },
-     "execution_count": 18,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
-    "cnt_array"
+    "INFO_items = list(INFO.items())\n",
+    "INFO_items.sort(key=lambda x: x[1]['order'])\n",
+    "tot_limb= []\n",
+    "\n",
+    "for key, file in tqdm(INFO_items):\n",
+    "    save_path = file['directory']\n",
+    "    bp = np.load(f\"{PROJECT_PATH}/{save_path}/rotated_bodypoints.npy\")\n",
+    "    bp = bp.astype(\"float64\")\n",
+    "    num_fr, num_bp, _ = bp.shape\n",
+    "    likelihood = bp[:,:,2]\n",
+    "    \n",
+    "    ### Locate Bad Frames ###\n",
+    "    # check if below likelihood threshold\n",
+    "    (below_thresh_fr, below_thresh_marker) = np.where(likelihood < config['likelihood_thresh'])\n",
+    "    cnt = collections.Counter(below_thresh_fr)\n",
+    "    cnt_array = np.array(list(cnt.items()))\n",
+    "    # check if above marker threshold\n",
+    "    try:\n",
+    "        # set low likelihood fr as bad fr\n",
+    "        bad_fr_idx = np.where(cnt_array[:,1] > config['marker_thresh'])[0]\n",
+    "        bad_fr = cnt_array[bad_fr_idx,0]\n",
+    "        # set nan fr as bad fr\n",
+    "        nan_fr, _, _ = np.where( np.isnan(bp) )\n",
+    "        unique_nan_fr = np.unique(nan_fr)\n",
+    "        bad_fr = np.concatenate([bad_fr, unique_nan_fr])\n",
+    "        bad_fr = np.unique(bad_fr)\n",
+    "        # append pads\n",
+    "        padded_fr = np.array([ list(range(fr-config['bad_fr_pad'], fr+config['bad_fr_pad']+1)) for fr in bad_fr])\n",
+    "        disregard_fr = np.unique(padded_fr.flatten())\n",
+    "        disregard_fr = disregard_fr[(disregard_fr >= 0) & (disregard_fr < num_fr)]\n",
+    "        good_fr_idx = np.array([True]*num_fr)\n",
+    "        good_fr_idx[disregard_fr] = False\n",
+    "        good_fr = np.where(good_fr_idx==True)[0]\n",
+    "    except:\n",
+    "        bad_fr = np.array([])\n",
+    "        disregard_fr = np.array([])\n",
+    "        good_fr = np.arange(num_fr)\n",
+    "\n",
+    "    # TODO: modify proportion of good fr\n",
+    "    file['good_fr'] = good_fr.tolist()\n",
+    "    file['bad_fr'] = bad_fr.tolist()\n",
+    "    file['disregard_fr'] = disregard_fr.tolist()\n",
+    "    \n",
+    "    \n",
+    "    # ********* fix ***********\n",
+    "    limbs = np.zeros((num_fr, len(config['limbs'])))\n",
+    "    for i, limb_pts in enumerate(config['limbs']):\n",
+    "        bp_good_fr = bp[good_fr,:,:]\n",
+    "\n",
+    "        limb_i = bp_good_fr[:,limb_pts,:]\n",
+    "        \n",
+    "        limbs[good_fr,i] = np.sqrt((limb_i[:,0,0]-limb_i[:,1,0])**2 + (limb_i[:,0,1]-limb_i[:,1,1])**2)\n",
+    "    inf_fr,_ = np.where(np.isinf(limbs))\n",
+    "    if len(inf_fr) != 0:\n",
+    "        break\n",
+    "\n",
+    "        \n",
+    "#     tot_limb.append(limbs[good_fr,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bad_fr_idx = np.where(cnt_array[:,1] > config['marker_thresh'])[0]\n",
-    "bad_fr = cnt_array[bad_fr_idx,0]"
+    "r1 = (limb_i[:,0,0]-limb_i[:,1,0])**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nan_fr, _, _ = np.where( np.isnan(bp) )\n",
-    "unique_nan_fr = np.unique(nan_fr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([    291,     292,     293, ..., 1872135, 1872136, 1872137])"
+       "(array([], dtype=int64),)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_nan_fr"
+    "np.where( np.isinf(r1) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bad_fr = np.concatenate([bad_fr, unique_nan_fr])\n",
-    "bad_fr = np.unique( bad_fr )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0,)"
+       "array([-12, -11, -10, ...,  -6,  -6,  -6])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.unique(np.where(np.isinf(rot_bp))[0]).shape"
+    "(limb_i[:,0,0]-limb_i[:,1,0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sqrt((limb_i[:,0,0]-limb_i[:,1,0])**2 + (limb_i[:,0,1]-limb_i[:,1,1])**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = np.array([[[  37.12 -449.8 ],\n",
-    "  [  81.3  -195.9 ]],\n",
-    "\n",
-    " [[  36.78 -461.  ],\n",
-    "  [  82.94 -201.5 ]],\n",
-    "\n",
-    " [[  36.38 -472.2 ],\n",
-    "  [  84.5  -207.5 ]],\n",
-    "\n",
-    " [[  35.84 -483.5 ],\n",
-    "  [  85.94 -213.2 ]],\n",
-    "\n",
-    " [[  35.9  -494.5 ],\n",
-    "  [  87.75 -219.  ]],\n",
-    "\n",
-    " [[  35.28 -506.  ],\n",
-    "  [  89.1  -224.9 ]],\n",
-    "\n",
-    " [[  35.12 -517.5 ],\n",
-    "  [  90.8  -230.9 ]],\n",
-    "\n",
-    " [[  34.94 -528.5 ],\n",
-    "  [  92.44 -236.6 ]],\n",
-    "\n",
-    " [[  34.66 -539.5 ],\n",
-    "  [  94.06 -242.5 ]]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-412.68],\n",
-       "       [-114.6 ]])"
+       "array([-18, -18, -18, ..., -25, -26, -26])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test[0]"
+    "limb_i[:,0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float16')"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bp.dtype"
    ]
   },
   {
