--- a/notebook/dong/0_feature_analysis/dataset_check.ipynb
+++ b/notebook/dong/0_feature_analysis/dataset_check.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,91 +201,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r1 = (limb_i[:,0,0]-limb_i[:,1,0])**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([], dtype=int64),)"
+       "4022.0"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.where( np.isinf(r1) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-12, -11, -10, ...,  -6,  -6,  -6])"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(limb_i[:,0,0]-limb_i[:,1,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-18, -18, -18, ..., -25, -26, -26])"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "limb_i[:,0,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('float16')"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bp.dtype"
+    "num_fr,_,_ = rot_bp.shape\n",
+    "\n",
+    "nan_fr,_,_ = np.where(np.isnan(rot_bp))\n",
+    "nan_fr = np.unique(nan_fr)\n",
+    "good_fr = np.array([True]*num_fr)\n",
+    "good_fr[nan_fr] = False\n",
+    "\n",
+    "np.max(bp[good_fr,:,:])"
    ]
   },
   {
