--- a/notebook/dong/4_all_features/(ALL)Cluster_Feature_Embedding.ipynb
+++ b/notebook/dong/4_all_features/(ALL)Cluster_Feature_Embedding.ipynb
@@ -1,13 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "SMALL_SIZE, MEDIUM_SIZE = 9, 12\n",
-    "PROJECT_PATH = \"/Users/donghur/Desktop/Research/Murthy/BM_GPU\""
+    "# Import Data"
    ]
   },
   {
@@ -16,40 +13,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
+    "PROJECT_PATH = \"/Users/donghur/Desktop/Research/Murthy/BM_GPU\"\n",
+    "PROJECT_PATH_BMGPU = \"/Users/donghur/Desktop/Research/Murthy/BM_GPU\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os, random, matplotlib, pickle, yaml, hdbscan\n",
     "import numpy as np\n",
-    "from glob import glob\n",
-    "import random, matplotlib\n",
+    "from sklearn.utils import shuffle\n",
+    "import seaborn as sns\n",
     "from tqdm.notebook import tqdm\n",
     "import matplotlib.pyplot as plt\n",
+    "from glob2 import glob\n",
     "\n",
     "sys.path.append(PROJECT_PATH)\n",
-    "from utils.data import Dataset"
+    "sys.path.append(PROJECT_PATH_BMGPU)\n",
+    "\n",
+    "from utils.data import Dataset\n",
+    "from utils.figure import plot_HDBSCAN\n",
+    "from cluster import HDBSCAN\n",
+    "%load_ext autoreload\n",
+    "%autoreload 1\n",
+    "%aimport helper\n",
+    "%aimport utils.data\n",
+    "%aimport utils.figure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading config.yaml ...\n",
+      "Finished loading config\n",
+      "Loading INFO.yaml ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|▏         | 2/141 [00:00<00:10, 13.23it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished loading INFO\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 141/141 [00:37<00:00,  3.74it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bodypoints\n",
+      "scaled_bodypoints\n",
+      "rotated_bodypoints\n",
+      "angles\n",
+      "limbs\n",
+      "angle_power\n",
+      "limb_power\n",
+      "all_embeddings\n",
+      "all_postural_embeddings\n",
+      "all_kinematic_embeddings\n",
+      "cluster\n"
+     ]
+    }
+   ],
    "source": [
-    "Data = Dataset(PROJECT_PATH, 'round3')\n",
-    "Data.load_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "config_path = f\"{PROJECT_PATH_BMGPU}/config_ant.yaml\"\n",
+    "Data = Dataset(PROJECT_PATH, config_path)\n",
+    "Data.load_data()\n",
+    "\n",
     "# configuration\n",
+    "INFO = Data.info\n",
     "INFO_values = Data.info_values\n",
     "config = Data.config\n",
     "skeleton = config['skeleton']\n",
     "skeleton_color= config['skeleton_color']\n",
     "\n",
     "# features\n",
+    "bp = Data.data_obj['bodypoints']\n",
     "rot_bp = Data.data_obj['rotated_bodypoints']\n",
     "angles = Data.data_obj['angles']\n",
     "limbs = Data.data_obj['limbs']\n",
@@ -59,15 +120,79 @@
     "# embeddings\n",
     "all_embed = Data.data_obj['all_embeddings']\n",
     "all_postural_embed = Data.data_obj['all_postural_embeddings']\n",
-    "all_kinematic_embed = Data.data_obj['all_kinematic_embeddings']"
+    "all_kinematic_embed = Data.data_obj['all_kinematic_embeddings']\n",
+    "angle_kinematic_embed = Data.data_obj['angle_kinematic_embeddings']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr>\n",
-    "<hr>"
+    "# Find Undefined Frames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bp_nan_fr = np.unique( np.where(np.isnan(bp))[0] )\n",
+    "angles_nan_fr = np.unique( np.where(np.isnan(angles))[0] )\n",
+    "limbs_nan_fr = np.unique( np.where(np.isnan(limbs))[0] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "angle_power_nan_fr = np.unique( np.where(np.isnan(angle_power))[0] )\n",
+    "limb_power_nan_fr = np.unique( np.where(np.isnan(limb_power))[0] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "662609"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(limb_power_nan_fr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": "true"
+   },
+   "source": [
+    "# Analysis"
    ]
   },
   {
